mudanças na index

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaia</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+        <div class="logo">
+        <img src="" alt="" />
+        </div>
+        <nav class="cabecalho">
+        <ul>
+            <ul><a href="#">Home</a></ul>
+            <ul><a href="#">Sobre nós</a></ul>
+            <ul><a href="#">Serviços</a></ul>
+            <ul><a href="#">Equipe</a></ul>
+            <ul><a href="#">Contato</a></ul>
+        </ul>
+        </nav>
+        </header>
+    <main>
+            <section class="home">
+
+            </section>
+            <section class="sobrenos">
+
+            </section>
+            <section class="servicos">
+
+            </section>
+            <section class="equipe">
+
+            </section>
+            <section class="contato">
+
+            </section>
+    </main> 
+        <footer>
+
+        </footer>
+    </body>
 </html>
