--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaia</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Adaia</title>
+        <link rel="stylesheet" href="../static/css/styles.css">
+    </head>
     <body>
         <header>
-        <div class="logo">
-        <img src="" alt="" />
-        </div>
-        <nav class="cabecalho">
-        <ul>
-            <ul><a href="#">Home</a></ul>
-            <ul><a href="#">Sobre nós</a></ul>
-            <ul><a href="#">Serviços</a></ul>
-            <ul><a href="#">Equipe</a></ul>
-            <ul><a href="#">Contato</a></ul>
-        </ul>
+        <img src="" alt="Logo">
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#quem-somos">Quem somos</a>
+            <a href="#servicos">Serviços</a>
+            <a href="#equipe">Equipe</a>
         </nav>
         </header>
+
     <main>
-            <section class="home">
+            <section id="home">
 
             </section>
-            <section class="sobrenos">
+
+            <section id="sobrenos">
 
             </section>
-            <section class="servicos">
+
+            <section id="servicos">
 
             </section>
-            <section class="equipe">
+
+            <section id="equipe">
 
             </section>
-            <section class="contato">
+
+            <section id="contato">
 
             </section>
     </main> 
