--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,13 @@
             <section id="home">
                  <div class="introducao">
                     <div class="texto-introducao">
-                        <h1></h1>
-                        <h2></h2>
-                        <p></p>
+                        <h1>Transformamos ideias em tecnologia</h1>
+                        <h2>Bem-vindo à Adaia — onde o futuro é agora!</h2>
+                        <p>Na Adaia, acreditamos que toda grande ideia merece ganhar vida. Por isso, unimos <br>
+                         inovação, estratégia e inteligência tecnológica para criar soluções sob medida, capazes de <br>
+                         antecipar tendências e gerar impacto real. Seja no desenvolvimento de sistemas, <br>
+                         plataformas ou produtos digitais, estamos prontos para transformar o presente e construir <br>
+                         o futuro ao seu lado.</p>
                     </div>
                 
                 </div>
