--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
             <a href="#quem-somos">Quem somos</a>
             <a href="#servicos">Serviços</a>
             <a href="#equipe">Equipe</a>
+            <a href="#contato">Contato</a>
         </nav>
         </header>
 
@@ -42,7 +43,22 @@
             </section>
 
             <section id="equipe">
-
+                <div class="analara">
+                    <img src="" alt="">
+                    <h3>Ana Lara</h3>
+                </div>
+                <div class="marcela">
+                    <img src="" alt="">
+                    <h3>Marcela</h3>
+                </div>
+                <div class="matheus">
+                    <img src="" alt="">
+                    <h3>Matheus</h3>
+                </div>
+                <div class="maria">
+                    <img src="" alt="">
+                    <h3>Maria Eduarda</h3>
+                </div>
             </section>
 
             <section id="contato">
@@ -50,7 +66,20 @@
             </section>
     </main> 
         <footer>
-
+            <img src="../static/img/rodape.png" alt="">
+        <div>
+            <img src="" alt="">
+            <div>
+                <a href="index.html">Home</a>
+                <a href="index.html">Quem somos</a>
+                <a href="index.html">Serviços</a>
+                <a href="index.html">Equipe</a>
+                <a href="index.html">Contato</a>
+            </div>
+        </div>
+        <div>
+            
+        </div>
         </footer>
     </body>
 </html>
