--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,11 @@
 
 }
 *{
-
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat';
+    text-decoration: none;
+    color: black;
+    max-width: 1400px;
 }
 
