--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="../static/css/styles.css">
     </head>
     <body>
-        <header>
-        <img src="" alt="Logo">
+        <header class="d-flex">
+        <img src="../static/img/logo.png" alt="Logo">
         <nav>
             <a href="#home">Home</a>
             <a href="#quem-somos">Quem somos</a>
@@ -19,9 +19,9 @@
         </header>
 
     <main>
-            <section id="home">
-                 <div class="introducao">
-                    <div class="texto-introducao">
+            <section id="home" class="home">
+                 <div>
+                    <div>
                         <h1>Transformamos ideias em tecnologia</h1>
                         <h2>Bem-vindo à Adaia — onde o futuro é agora!</h2>
                         <p>Na Adaia, acreditamos que toda grande ideia merece ganhar vida. Por isso, unimos <br>
