Formatação do Html
Todas as informações que foi pedidas apenas tem que ser feito o CSS

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,29 +33,42 @@
                 
                 </div>
             </section>
-
+            <br>
             <section id="sobrenos">
-
+                <div>
+                    <p>A Adaia é uma empresa que une arte, ciência e código para criar soluções tecnológicas inteligentes, acessíveis e humanizadas. Inspirada em Ada Lovelace e movida por inovação com propósito, a Adaia desenvolve experiências digitais que equilibram estética e funcionalidade, colocando as pessoas no centro de tudo. Com base em valores como inclusão, conhecimento compartilhado e ética, a empresa busca reinventar a forma como a tecnologia conecta e transforma o mundo.</p>
+                </div>
             </section>
-
+            <br>
             <section id="servicos">
-
+                <br>
+                <div><h4>Desenvolvimento de sistemas</h4><br>
+                    <p>Criamos sistemas personalizados que integram design, eficiência e inteligência para atender às necessidades únicas de cada projeto. <br>
+                    Unimos arte, ciência e código para transformar processos em experiências digitais fluidas e acessíveis.</p></div>
+                <br>
+                <div><h4>Manutenção de servidores e sites</h4><br>
+                    <p>Garantimos o funcionamento contínuo e seguro de servidores e sites, com suporte técnico ágil e especializado. <br>
+                    Cuidamos da estabilidade da sua presença digital para que você foque no que realmente importa.</p></div>
+                <br>
+                <div><h4>Consultoria em tecnologia</h4><br>
+                    <p>Oferecemos consultoria estratégica para transformar ideias em soluções tecnológicas eficientes, éticas e inovadoras. <br>
+                    Ajudamos você a tomar decisões seguras e criativas no uso da tecnologia para alcançar seus objetivos.</p></div>
             </section>
 
             <section id="equipe">
-                <div class="analara">
+                <div class="participantes">
                     <img src="" alt="">
                     <h3>Ana Lara</h3>
                 </div>
-                <div class="marcela">
+                <div class="participantes">
                     <img src="" alt="">
                     <h3>Marcela</h3>
                 </div>
-                <div class="matheus">
+                <div class="participantes">
                     <img src="" alt="">
                     <h3>Matheus</h3>
                 </div>
-                <div class="maria">
+                <div class="participantes">
                     <img src="" alt="">
                     <h3>Maria Eduarda</h3>
                 </div>
