--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,7 +20,7 @@
 }
 
 header {
-    background-color: var(--cor-roxo-escuro);
+    background-color: var(--cor-roxao);
     padding: 30px;
     max-width: 1400px;
     margin: 0 auto;
@@ -28,16 +28,27 @@ header {
     font-size: 18px;
 }
 
+
 header img {
     width: 70px;
 }
 
+header nav {
+    gap: 20px;
+    margin-left: 600px;
+    margin-top: 40px;
+    
+}
 
 .home {
-    background-color: #110537;
+    background-color: var(--cor-preto);
+    max-width: 1400px;
+    height: 400px;
+    
 }
 
 .d-flex {
     display: flex;
 }
+
 
