--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <body>
         <header class="d-flex">
         <img src="../static/img/logo.png" alt="Logo">
-        <nav>
+        <nav class="d-flex">
             <a href="#home">Home</a>
             <a href="#quem-somos">Quem somos</a>
             <a href="#servicos">Serviços</a>
