Formulario e pontos fortes

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,19 @@
                     Ajudamos você a tomar decisões seguras e criativas no uso da tecnologia para alcançar seus objetivos.</p></div>
             </section>
 
+            <section class="">
+                <p>Nós como empresa temos nosso pontos forts que são: criatividade, transparência, trabalho em equipe.</p>
+            </section>
+
+            <section class="Formulario">
+                <form method="post">
+                    <input type="text" name="nome" placeholder="Nome" required>
+                    <input type="number" name="telefone" placeholder="Telefone" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <button class="botao cheio" type="submit">Salvar</button>
+                    <a class="botao cancelar cheio" href="/">Cancelar</a>
+                </form>
+            </section>
             <section id="equipe">
                 <div class="participantes">
                     <img src="" alt="">
