--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,12 @@
                         antecipar tendências e gerar impacto real. Seja no desenvolvimento de sistemas, <br>
                         plataformas ou produtos digitais, estamos prontos para transformar o presente e construir <br>
                         o futuro ao seu lado.
-                    </p>              
+                    </p>
+                    <div class="imagemhome d-flex">
+                    <img src="../static/img/home.png" alt="">
+                    </div>              
                 </div>
+                
             </section>
 
             <section id="sobrenos">
@@ -75,21 +79,12 @@
                 </div>
             </section>
             <section id="equipe" class="equipe">
-
-            <section class="">
-                <p>Nós como empresa temos nosso pontos forts que são: criatividade, transparência, trabalho em equipe.</p>
+                <h2>Nossa equipe</h2>
+                <p>Nós como empresa temos nossos pontos fortes, que são: criatividade, transparência, trabalho em equipe.</p>
             </section>
 
-            <section class="Formulario">
-                <form method="post">
-                    <input type="text" name="nome" placeholder="Nome" required>
-                    <input type="number" name="telefone" placeholder="Telefone" required>
-                    <input type="email" name="email" placeholder="Email" required>
-                    <button class="botao cheio" type="submit">Salvar</button>
-                    <a class="botao cancelar cheio" href="/">Cancelar</a>
-                </form>
-            </section>
-            <section id="equipe">
+            
+            <section id="equipe" class="participantes-container">
 
                 <div class="participantes">
                     <img src="" alt="">
@@ -108,26 +103,33 @@
                     <h3>Maria Eduarda</h3>
                 </div>
             </section>
-
-            <section id="contato">
-
-            </section>
     </main> 
-        <footer>
-            <img src="../static/img/rodape.png" alt="">
-        <div>
-            <img src="" alt="">
-            <div>
+        <footer class="d-flex">
+             <img src="../static/img/logo.png" alt="Logo">
+            <div class="rodape d-flex">
                 <a href="index.html">Home</a>
                 <a href="index.html">Quem somos</a>
                 <a href="index.html">Serviços</a>
                 <a href="index.html">Equipe</a>
                 <a href="index.html">Contato</a>
             </div>
-        </div>
-        <div>
-            
-        </div>
+        
+            <div class="contatorodape">
+                <h3>Entre em contato conosco → </h3>
+            </div>
+             
+            <section class="formulario d-flex">
+              
+                <form method="post">
+                    <input type="text" name="nome" placeholder="Nome" required>
+                    <input type="number" name="telefone" placeholder="Telefone" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <button class="botao cheio" type="submit">Salvar</button>
+                    <a class="botao cancelar" href="/">Cancelar</a>
+                </form>
+           
+            </section>
+        
         </footer>
     </body>
 </html>
