--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,12 +20,12 @@
 }
 
 header {
-    background-color: var(--cor-roxao);
+    background-color: var(--cor-preto);
     padding: 30px;
     max-width: 1400px;
-
     font-size: 18px;
 }
+
 
 
 header img {
@@ -44,6 +44,16 @@ header nav {
     max-width: 1400px;
     height: 400px;
     
+}
+.conteudo-home h1 {
+    font-size: 34px;
+}
+.imagemhome {
+    width: 30px;
+    height: 400px;
+    position: absolute;
+    margin-left: 750px;
+    top: 127px;
 }
 
 .d-flex {
@@ -65,6 +75,8 @@ header nav {
     flex-wrap: wrap;
     gap: 15px;
 }
+
+
 
 .servicos {
     height: 400px;
@@ -112,7 +124,120 @@ header nav {
     height: 100px;
 }
 
-.participantes h3{
-    color: var(--cor-roxo2);
-    font-size: 20px;
+.equipe {
+    background-color: white;
+    text-align: center;
+    padding: 40px 20px;
+    color: #333;
 }
+
+.equipe h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+    color: var(--cor-preto);
+}
+
+.equipe p {
+    font-size: 16px;
+    max-width: 600px;
+    margin: 0 auto;
+    color: #555;
+}
+
+.participantes-container {
+    background-color: var(--cor-branco);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 30px 20px;
+}
+
+.participante {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.participantes h3 {
+    font-size: 16px;
+    color: var(--cor-roxo);
+}
+
+footer {
+     padding-top: 30px;
+    background-color: var(--cor-preto);
+    height: 250px;
+}
+
+footer img{
+    height: 65px;
+    padding-top: 140px;
+    margin-left: 30px;
+}
+
+.rodape {
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 25px;
+    margin-left: 50px;
+}
+ .contatorodape {
+    margin-left: 200px;
+    margin-top: 50px;
+ }
+
+.formulario {
+    margin-left: 100px;
+    margin-top: 20px;
+}
+
+.formulario form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+   
+}
+
+.formulario input {
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    font-size: 12px;
+    background-color: var(--cor-branco);
+    color: var(--cor-preto);
+}
+
+
+.botao {
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.cheio {
+    background-color: var(--cor-rosa-claro);
+    color: var(--cor-branco);
+}
+
+.cheio:hover {
+    background-color: var(--cor-roxo);
+    color: var(--cor-branco);
+}
+
+.botao.cancelar {
+    color: var(--cor-branco);
+    text-align: center;
+     box-shadow: 0 8px 24px rgba(112, 103, 103, 0.3);
+}
+
+
