--- a/templates/index.html
+++ b/templates/index.html
@@ -38,11 +38,14 @@
                 
             </section>
 
-            <section id="sobrenos">
+            <section id="sobrenos" class="d-flex">
+                <div>
+                    
+                </div>
                 <div class="quemsomos d-flex">
                     <h2>Quem Somos</h2>
                     <p>A Adaia é uma empresa que une arte, ciência e código para criar soluções tecnológicas inteligentes, acessíveis e humanizadas. Inspirada em Ada Lovelace e movida por inovação com propósito, a Adaia desenvolve experiências digitais que equilibram estética e funcionalidade, colocando as pessoas no centro de tudo. Com base em valores como inclusão, conhecimento compartilhado e ética, a empresa busca reinventar a forma como a tecnologia conecta e transforma o mundo.</p>
-                </div>
+                
             </section>
 
 
