--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
                     <input type="text" name="nome" placeholder="Nome" required>
                     <input type="number" name="telefone" placeholder="Telefone" required>
                     <input type="email" name="email" placeholder="Email" required>
-                    <button class="botao cheio" type="submit">Salvar</button>
+                    <button class="botao cheio" type="submit">Enviar</button>
                     <a class="botao cancelar" href="/">Cancelar</a>
                 </form>
            
